# DevStackBox

./: .eslintrc.js  .gitattributes  .gitignore  .npmrc  BUNDLED_SETUP.md  BUNDLE_SETUP.md  BUNDLE_SETUP_V2.md  DOWNLOAD_LINKS.md  FEATURE_IMPLEMENTATION.md  INDEPENDENT_STATUS.md  INSTALL.md  OFFLINE_SETUP.md  PHP_EXTENSIONS.md  PORTABLE_STATUS.md  PRE_BUNDLED_SETUP.md  PUSH_TO_GIT_GUIDE.md  README.md  REAL_STATUS.md  RELEASE.md  RELEASE_NOTES.md  SETUP_GUIDE.md  STATUS.md  USAGE_GUIDE.md  download-and-bundle.bat  download-and-bundle.ps1  download-bundle.ps1  index.html  index_simple.html  main.js  main.tsx  mysql_connect_test.php  package-lock.json  package.json  phpmyadmin_test.php  preload.js  prepare-directories.bat  tailwind.config.js  test-loading.html  test-php-extensions.js  test-portable.js  (+2 more)
.github/: copilot-instructions.md
apache/: README.md
apps/: README.md
assets/: icon_placeholder.txt
config/: httpd.conf  installers.json  my.cnf  php.ini  phpmyadmin.conf
locales/: en.json  hi.json
mysql/: README.md  my.ini
php/: README.md
phpmyadmin/: config.inc.php
scripts/: app-mods.js  app.js  config-ui-new.js  config-ui.js  i18n.js  main.js  one-click-installers.js  prepare-binaries.ts  prepare-release.ps1  prepare-release.sh  service-status-helper.js  setup-dev.bat  setup-dev.sh  tailwind-config-ui.js  test.js
src/: App.tsx  TestApp.tsx  index.html  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
styles/: config-ui.css  dark-mode.css  installers.css  main.css  tailwind-modal.css  tailwind-output.css  tailwind.css
(+48 files in other folders)
